<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header_block"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_user_photo_civ"
            android:layout_width="@dimen/settings_user_photo_width"
            android:layout_height="@dimen/settings_user_photo_height"
            android:src="@drawable/default_pic1"
            android:layout_marginStart="@dimen/app_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_full_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            tools:text="@string/settings_default_username"
            android:textSize="@dimen/normalText"
            android:layout_marginStart="@dimen/app_margin"
            android:layout_marginTop="@dimen/app_small_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_user_photo_civ"
            app:layout_constraintStart_toEndOf="@+id/settings_user_photo_civ">
        </TextView>

        <TextView
            android:id="@+id/settings_status_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteDark"
            tools:text="@string/settings_default_status"
            android:textSize="@dimen/smallText"
            android:layout_marginStart="@dimen/app_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_full_name_tv"
            app:layout_constraintStart_toEndOf="@+id/settings_user_photo_civ">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <TextView
        android:id="@+id/settings_text_account_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/smallText"
        android:text="@string/settings_text_account"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginTop="@dimen/vertical_large_margin"
        app:layout_constraintTop_toBottomOf="@id/settings_header_block">
    </TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_text_account_tv"
        style="@style/settings_buttons">

        <TextView
            android:id="@+id/settings_phone_number_tv"
            tools:text="@string/settings_default_number"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normal_text">
        </TextView>

        <TextView
            android:id="@+id/settings_label_phone_number_tv"
            android:text="@string/settings_label_phone_number"
            app:layout_constraintTop_toBottomOf="@id/settings_phone_number_tv"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/small_text">
        </TextView>

        <View
            app:layout_constraintTop_toBottomOf="@id/settings_label_phone_number_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator">
        </View>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_phone_number"
        style="@style/settings_buttons">

        <TextView
            android:id="@+id/settings_user_name_tv"
            tools:text="@string/settings_default_login"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_user_name"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normal_text">
        </TextView>

        <TextView
            android:id="@+id/settings_label_user_name_tv"
            android:text="@string/settings_label_login"
            app:layout_constraintTop_toBottomOf="@id/settings_user_name_tv"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/small_text">
        </TextView>

        <View
            app:layout_constraintTop_toBottomOf="@id/settings_label_user_name_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator">
        </View>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_bio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_user_name"
        style="@style/settings_buttons">

        <TextView
            android:id="@+id/settings_bio_tv"
            tools:text="@string/settings_default_bio"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_bio"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normal_text">
        </TextView>

        <TextView
            android:id="@+id/settings_label_bio_tv"
            android:text="@string/settings_label_bio"
            app:layout_constraintTop_toBottomOf="@id/settings_bio_tv"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/small_text">
        </TextView>

        <View
            app:layout_constraintTop_toBottomOf="@id/settings_label_bio_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator">
        </View>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_change_photo_civ"
        android:layout_width="@dimen/settings_btn_change_photo_width"
        android:layout_height="@dimen/settings_btn_change_photo_height"
        android:src="@drawable/cam"
        app:civ_border_color="@color/grey"
        app:civ_circle_background_color="@color/white"
        android:layout_marginEnd="@dimen/app_margin"
        app:layout_constraintBottom_toBottomOf="@+id/settings_header_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_header_block" />

</androidx.constraintlayout.widget.ConstraintLayout>